# template-eyre

./: .gitignore  .mergify.yml  Cargo.toml  README.md
.github/workflows/: test.yml
examples/: simple_custom.rs
src/: ext.rs  helpers.rs  lib.rs  templates.rs  tests.rs
src/snapshots/: template_eyre__tests__colored_simple_1.snap  template_eyre__tests__colored_simple_2.snap  template_eyre__tests__colored_simple_3.snap  template_eyre__tests__demo_1.snap  template_eyre__tests__demo_2.snap  template_eyre__tests__demo_3.snap  template_eyre__tests__simple_1.snap  template_eyre__tests__simple_2.snap  template_eyre__tests__simple_3.snap
src/templates/: colored_simple.hbs  demo.hbs  simple.hbs
