[package]
name = "template-eyre"
description = "An error reporter for panics and `eyre::Report` with handlebars template support."
keywords = ["error", "eyre", "color", "template"]
version = "0.1.0-alpha.6"
edition = "2021"
license = "MIT"
repository = "https://github.com/PhotonQuantum/template-eyre"
exclude = [".github/**/*", ".mergify.yml", "bacon.toml", ".gitignore"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15"
eyre = { version = "0.6", default-features = false }
handlebars = "4.2"
indenter = "0.3"
itertools = "0.10"
serde_json = "1.0"

[dev-dependencies]
insta = "1.14"
once_cell = "1.11"
